Fix button stuck when clicked to fast

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
 
 button { 
   font-family: "roboto condensed", sans-serif;
-  flex-shrink: 2;
+  flex-shrink: 1;
   margin-top: 0px;
   border: 3px solid #000000;
   width: 100px;
